agregadas tecnologias, falta descripcion y enlaces

--- a/index.html
+++ b/index.html
@@ -37,13 +37,12 @@
       <!-- Intro -->
       <section id="intro" class="wrapper style1 fullscreen fade-up">
         <div class="inner">
-          <h1>Hola, Soy Willian un desarrollador Backend.</h1>
+          <h1>Hola, Soy Willian Abrego un desarrollador Backend.</h1>
           <p>
             Mi enfoque principal es el desarrollo de soluciones web escalables y
             de alta calidad utilizando el framework Laravel. Me apasiona
             trabajar en proyectos desafiantes y colaborar con equipos de
             desarrollo altamente motivados.
-            <a href="#">Link github</a>.
           </p>
           <ul class="actions">
             <li><a href="#one" class="button scrolly">Learn more</a></li>
@@ -121,40 +120,41 @@
           </p>
           <div class="features">
             <section>
-              <span class="icon solid major fa-code"></span>
-              <h3>Lorem ipsum amet</h3>
+              <span class="icon solid major brands fa-github"></span>
+
+              <h3>GitHub</h3>
               <p>
                 Phasellus convallis elit id ullam corper amet et pulvinar. Duis
                 aliquam turpis mauris, sed ultricies erat dapibus.
               </p>
             </section>
             <section>
-              <span class="icon solid major fa-lock"></span>
-              <h3>Aliquam sed nullam</h3>
+              <span class="icon solid major fa-php"></span>
+              <h3>PHP</h3>
               <p>
                 Phasellus convallis elit id ullam corper amet et pulvinar. Duis
                 aliquam turpis mauris, sed ultricies erat dapibus.
               </p>
             </section>
             <section>
-              <span class="icon solid major fa-cog"></span>
-              <h3>Sed erat ullam corper</h3>
+              <span class="icon solid major fa-js"></span>
+              <h3>Javascript</h3>
               <p>
                 Phasellus convallis elit id ullam corper amet et pulvinar. Duis
                 aliquam turpis mauris, sed ultricies erat dapibus.
               </p>
             </section>
             <section>
-              <span class="icon solid major fa-desktop"></span>
-              <h3>Veroeros quis lorem</h3>
+              <span class="icon solid major fa-brands fa-python"></span>
+              <h3>Python</h3>
               <p>
-                Phasellus convallis elit id ullam corper amet et pulvinar. Duis
-                aliquam turpis mauris, sed ultricies erat dapibus.
+                s Phasellus convallis elit id ullam corper amet et pulvinar.
+                Duis aliquam turpis mauris, sed ultricies erat dapibus.
               </p>
             </section>
             <section>
               <span class="icon solid major fa-link"></span>
-              <h3>Urna quis bibendum</h3>
+              <h3>NodeJs</h3>
               <p>
                 Phasellus convallis elit id ullam corper amet et pulvinar. Duis
                 aliquam turpis mauris, sed ultricies erat dapibus.
@@ -162,7 +162,7 @@
             </section>
             <section>
               <span class="icon major fa-gem"></span>
-              <h3>Aliquam urna dapibus</h3>
+              <h3>Django</h3>
               <p>
                 Phasellus convallis elit id ullam corper amet et pulvinar. Duis
                 aliquam turpis mauris, sed ultricies erat dapibus.
@@ -178,7 +178,7 @@
       <!-- Three -->
       <section id="three" class="wrapper style1 fade-up">
         <div class="inner">
-          <h2>Get in touch</h2>
+          <h2>Contacto</h2>
           <p>
             Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam
             turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus,
