tecnologias -descripcion agregada

--- a/index.html
+++ b/index.html
@@ -124,54 +124,45 @@
 
               <h3>GitHub</h3>
               <p>
-                Phasellus convallis elit id ullam corper amet et pulvinar. Duis
-                aliquam turpis mauris, sed ultricies erat dapibus.
+                Mis habilidades en GitHub incluyen un sólido conocimiento de
+                Git, la capacidad de manejar ramas y fusiones de manera
+                efectiva, así como habilidades de comunicación y colaboración
+                para trabajar en equipo.
               </p>
             </section>
             <section>
-              <span class="icon solid major fa-php"></span>
-              <h3>PHP</h3>
+              <span class="icon solid major fa-code"></span>
+              <h3>Laravel</h3>
               <p>
-                Phasellus convallis elit id ullam corper amet et pulvinar. Duis
-                aliquam turpis mauris, sed ultricies erat dapibus.
+                Mis habilidades en Laravel incluyen un conocimiento de su
+                arquitectura y sus características, así como la capacidad de
+                utilizar herramientas de desarrollo como Artisan, Composer y
+                PHPUnit para mejorar la eficiencia del proceso de desarrollo y
+                la calidad del código.
               </p>
             </section>
             <section>
-              <span class="icon solid major fa-js"></span>
-              <h3>Javascript</h3>
-              <p>
-                Phasellus convallis elit id ullam corper amet et pulvinar. Duis
-                aliquam turpis mauris, sed ultricies erat dapibus.
-              </p>
-            </section>
-            <section>
-              <span class="icon solid major fa-brands fa-python"></span>
-              <h3>Python</h3>
-              <p>
-                s Phasellus convallis elit id ullam corper amet et pulvinar.
-                Duis aliquam turpis mauris, sed ultricies erat dapibus.
-              </p>
-            </section>
-            <section>
-              <span class="icon solid major fa-link"></span>
+              <span class="fab icon solid major fa-code"></span>
               <h3>NodeJs</h3>
               <p>
-                Phasellus convallis elit id ullam corper amet et pulvinar. Duis
-                aliquam turpis mauris, sed ultricies erat dapibus.
+                Capacidad de utilizar marcos de trabajo como Express para
+                mejorar la eficiencia del proceso de desarrollo. Además, tengo
+                experiencia en el uso de herramientas de desarrollo como NPM,
+                Grunt y Mocha para mejorar la calidad y la facilidad de
+                mantenimiento del código.
               </p>
             </section>
             <section>
-              <span class="icon major fa-gem"></span>
-              <h3>Django</h3>
+              <span class="icon solid major fa-brands fa-code"></span>
+              <h3>Python</h3>
               <p>
-                Phasellus convallis elit id ullam corper amet et pulvinar. Duis
-                aliquam turpis mauris, sed ultricies erat dapibus.
+                Mis habilidades en Python incluyen un amplio conocimiento de sus
+                características y funcionalidades, así como la capacidad de
+                utilizar frameworks como Django o Flask para mejorar la
+                eficiencia del proceso de desarrollo.
               </p>
             </section>
           </div>
-          <ul class="actions">
-            <li><a href="generic.html" class="button">Learn more</a></li>
-          </ul>
         </div>
       </section>
 
