agregado contenido a la seccion mis proyectos

--- a/index.html
+++ b/index.html
@@ -58,11 +58,15 @@
           /></a>
           <div class="content">
             <div class="inner">
-              <h2>Sed ipsum dolor</h2>
+              <h2>Creación de un sistema de gestión de tareas</h2>
               <p>
-                Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam
-                turpis mauris, eu ultricies erat malesuada quis. Aliquam
-                dapibus.
+                Desarrollé un sistema de gestión de tareas utilizando Laravel,
+                que permite a los usuarios crear, asignar y realizar un
+                seguimiento de tareas de manera eficiente. La aplicación incluye
+                características como la creación de tareas, la asignación de
+                tareas a usuarios, la programación de fechas límite, la búsqueda
+                y filtrado de tareas, y la notificación por correo electrónico
+                de cambios en el estado de la tarea.
               </p>
               <ul class="actions">
                 <li><a href="generic.html" class="button">Learn more</a></li>
@@ -76,11 +80,12 @@
           /></a>
           <div class="content">
             <div class="inner">
-              <h2>Feugiat consequat</h2>
+              <h2>Desarrollo de una aplicación de chat en tiempo real</h2>
               <p>
-                Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam
-                turpis mauris, eu ultricies erat malesuada quis. Aliquam
-                dapibus.
+                Desarrollé una aplicación de chat en tiempo real utilizando
+                Laravel y Socket.io, que permite a los usuarios comunicarse en
+                tiempo real a través de una interfaz de chat intuitiva y fácil
+                de usar.
               </p>
               <ul class="actions">
                 <li><a href="generic.html" class="button">Learn more</a></li>
@@ -94,11 +99,14 @@
           /></a>
           <div class="content">
             <div class="inner">
-              <h2>Ultricies aliquam</h2>
+              <h2>Desarrollo de un sitio web de comercio electrónico</h2>
               <p>
-                Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam
-                turpis mauris, eu ultricies erat malesuada quis. Aliquam
-                dapibus.
+                Desarrollé un sitio web de comercio electrónico utilizando
+                Laravel, que permite a los clientes comprar y vender productos
+                de manera fácil y eficiente. La plataforma incluye
+                características como la gestión de productos, el proceso de pago
+                seguro, la gestión de pedidos y envíos, y la integración con
+                sistemas de seguimiento y análisis de ventas
               </p>
               <ul class="actions">
                 <li><a href="generic.html" class="button">Learn more</a></li>
