Descripcion de proyectos

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
   <head>
-    <title>Portafolio Willian Abrego</title>
+    <title>Willian Abrego</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -40,9 +40,10 @@
           <h1>Hola, Soy Willian Abrego un desarrollador Backend.</h1>
           <p>
             Mi enfoque principal es el desarrollo de soluciones web escalables y
-            de alta calidad utilizando el framework Laravel. Me apasiona
-            trabajar en proyectos desafiantes y colaborar con equipos de
-            desarrollo altamente motivados.
+            de alta calidad. Disfruto especialmente colaborar estrechamente con
+            equipos de desarrollo, ya que creo firmemente en el intercambio de
+            ideas para lograr resultados excepcionales. La comunicación efectiva
+            y la cooperación son elementos clave en mi enfoque de trabajo.
           </p>
           <ul class="actions">
             <li><a href="#one" class="button scrolly">Learn more</a></li>
@@ -60,13 +61,13 @@
             <div class="inner">
               <h2>Creación de un sistema de gestión de tareas</h2>
               <p>
-                Desarrollé un sistema de gestión de tareas utilizando Laravel,
-                que permite a los usuarios crear, asignar y realizar un
-                seguimiento de tareas de manera eficiente. La aplicación incluye
-                características como la creación de tareas, la asignación de
-                tareas a usuarios, la programación de fechas límite, la búsqueda
-                y filtrado de tareas, y la notificación por correo electrónico
-                de cambios en el estado de la tarea.
+                Este proyecto es un sistema CRM (Customer Relationship
+                Management) desarrollado en Laravel, diseñado para gestionar de
+                manera eficiente la relación con los clientes, así como la
+                planificación y seguimiento de tareas y proyectos. La aplicación
+                utiliza el patrón de diseño Modelo-Vista-Controlador (MVC) de
+                Laravel y ofrece una estructura modular para facilitar su
+                expansión y personalización.
               </p>
               <ul class="actions">
                 <li><a href="generic.html" class="button">Learn more</a></li>
@@ -82,10 +83,15 @@
             <div class="inner">
               <h2>Desarrollo de una aplicación de chat en tiempo real</h2>
               <p>
-                Desarrollé una aplicación de chat en tiempo real utilizando
-                Laravel y Socket.io, que permite a los usuarios comunicarse en
-                tiempo real a través de una interfaz de chat intuitiva y fácil
-                de usar.
+                La aplicación de chat desarrollada con Laravel y Laravel
+                WebSockets ofrece a los usuarios una plataforma interactiva y
+                dinámica para la comunicación en tiempo real. Con una interfaz
+                intuitiva y amigable, los usuarios pueden conectarse
+                instantáneamente, intercambiar mensajes y participar en
+                conversaciones fluidas. Gracias a la integración de Laravel
+                WebSockets, la aplicación garantiza una experiencia de chat sin
+                demoras, con notificaciones en tiempo real para mantener a los
+                usuarios actualizados sobre nuevas interacciones.
               </p>
               <ul class="actions">
                 <li><a href="generic.html" class="button">Learn more</a></li>
@@ -99,14 +105,12 @@
           /></a>
           <div class="content">
             <div class="inner">
-              <h2>Desarrollo de un sitio web de comercio electrónico</h2>
+              <h2>Laralinker</h2>
               <p>
-                Desarrollé un sitio web de comercio electrónico utilizando
-                Laravel, que permite a los clientes comprar y vender productos
-                de manera fácil y eficiente. La plataforma incluye
-                características como la gestión de productos, el proceso de pago
-                seguro, la gestión de pedidos y envíos, y la integración con
-                sistemas de seguimiento y análisis de ventas
+                Este proyecto consiste en un acortador de URL, es una
+                herramienta fácil de usar que te permite transformar enlaces
+                largos en enlaces cortos y fáciles de compartir. Con una
+                interfaz sencilla, puedes acortar tus URL en segundos.
               </p>
               <ul class="actions">
                 <li><a href="generic.html" class="button">Learn more</a></li>
