agregado descripcion de tecnologias

--- a/index.html
+++ b/index.html
@@ -1,9 +1,4 @@
 <!DOCTYPE html>
-<!--
-	Hyperspace by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
   <head>
     <title>Willian Abrego</title>
@@ -46,13 +41,13 @@
             y la cooperación son elementos clave en mi enfoque de trabajo.
           </p>
           <ul class="actions">
-            <li><a href="#one" class="button scrolly">Learn more</a></li>
+            <li><a href="#one" class="button scrolly">Proyectos</a></li>
           </ul>
         </div>
       </section>
 
       <!-- One -->
-      <section id="one" class="wrapper style2 spotlights">
+      <section id="one" class="wrapper style2-alt spotlights">
         <section>
           <a href="#" class="image"
             ><img src="images/pic01.jpg" alt="" data-position="center center"
@@ -70,7 +65,10 @@
                 expansión y personalización.
               </p>
               <ul class="actions">
-                <li><a href="generic.html" class="button">Learn more</a></li>
+                <li><a href="#" class="button">Learn more</a></li>
+                <li>
+                  <a href="#" class="button icon brands fa-github">GitHub</a>
+                </li>
               </ul>
             </div>
           </div>
@@ -94,7 +92,10 @@
                 usuarios actualizados sobre nuevas interacciones.
               </p>
               <ul class="actions">
-                <li><a href="generic.html" class="button">Learn more</a></li>
+                <li><a href="#" class="button">Learn more</a></li>
+                <li>
+                  <a href="#" class="button icon brands fa-github">GitHub</a>
+                </li>
               </ul>
             </div>
           </div>
@@ -113,7 +114,10 @@
                 interfaz sencilla, puedes acortar tus URL en segundos.
               </p>
               <ul class="actions">
-                <li><a href="generic.html" class="button">Learn more</a></li>
+                <li><a href="#" class="button">Learn more</a></li>
+                <li>
+                  <a href="#" class="button icon brands fa-github">GitHub</a>
+                </li>
               </ul>
             </div>
           </div>
@@ -121,14 +125,16 @@
       </section>
 
       <!-- Two -->
-      <section id="two" class="wrapper style3 fade-up">
+      <section id="two" class="wrapper style1-alt fade-up">
         <div class="inner">
           <h2>Tecnologías y habilidades</h2>
           <p>
-            Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam
-            turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus,
-            lacus eget hendrerit bibendum, urna est aliquam sem, sit amet
-            imperdiet est velit quis lorem.
+            Actualmente, me encuentro inmerso en un constante proceso de
+            aprendizaje, explorando y adquiriendo nuevas habilidades en el
+            ámbito del desarrollo de software. Estoy dedicando tiempo de manera
+            regular para familiarizarme con diversas herramientas y tecnologías
+            emergentes, con el objetivo de mantenerme actualizado y mejorar mi
+            conjunto de habilidades en este campo en constante evolución.
           </p>
           <div class="features">
             <section>
@@ -138,8 +144,7 @@
               <p>
                 Mis habilidades en GitHub incluyen un sólido conocimiento de
                 Git, la capacidad de manejar ramas y fusiones de manera
-                efectiva, así como habilidades de comunicación y colaboración
-                para trabajar en equipo.
+                efectiva.
               </p>
             </section>
             <section>
@@ -157,21 +162,19 @@
               <span class="fab icon solid major fa-code"></span>
               <h3>NodeJs</h3>
               <p>
-                Capacidad de utilizar marcos de trabajo como Express para
-                mejorar la eficiencia del proceso de desarrollo. Además, tengo
-                experiencia en el uso de herramientas de desarrollo como NPM,
-                Grunt y Mocha para mejorar la calidad y la facilidad de
-                mantenimiento del código.
+                Utilizo herramientas como npm para gestionar dependencias y
+                paquetes en mis proyectos, facilitando la creación de
+                aplicaciones más robustas.
               </p>
             </section>
             <section>
               <span class="icon solid major fa-brands fa-code"></span>
-              <h3>Python</h3>
+              <h3>JavaScript</h3>
               <p>
-                Mis habilidades en Python incluyen un amplio conocimiento de sus
-                características y funcionalidades, así como la capacidad de
-                utilizar frameworks como Django o Flask para mejorar la
-                eficiencia del proceso de desarrollo.
+                He utilizado Axios para realizar peticiones a servidores,
+                interactuar y gestionar eficientemente las respuestas. Además,
+                tengo conocimientos profundos en manipulación del DOM y gestión
+                de eventos.
               </p>
             </section>
           </div>
@@ -182,12 +185,7 @@
       <section id="three" class="wrapper style1 fade-up">
         <div class="inner">
           <h2>Contacto</h2>
-          <p>
-            Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam
-            turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus,
-            lacus eget hendrerit bibendum, urna est aliquam sem, sit amet
-            imperdiet est velit quis lorem.
-          </p>
+          <p></p>
           <div class="split style1">
             <section>
               <form method="post" action="#">
