--- a/index.html
+++ b/index.html
@@ -63,7 +63,12 @@
               </p>
               <ul class="actions">
                 <li>
-                  <a href="#" class="button icon brands fa-github">GitHub</a>
+                  <a
+                    href="https://github.com/WillianAbrego/LaravelCRM"
+                    target="_blank"
+                    class="button icon brands fa-github"
+                    >GitHub</a
+                  >
                 </li>
               </ul>
             </div>
@@ -86,7 +91,12 @@
               </p>
               <ul class="actions">
                 <li>
-                  <a href="#" class="button icon brands fa-github">GitHub</a>
+                  <a
+                    href="https://github.com/WillianAbrego/LaravelWebSockets"
+                    target="_blank"
+                    class="button icon brands fa-github"
+                    >GitHub</a
+                  >
                 </li>
               </ul>
             </div>
@@ -104,7 +114,12 @@
               </p>
               <ul class="actions">
                 <li>
-                  <a href="#" class="button icon brands fa-github">GitHub</a>
+                  <a
+                    href="https://github.com/WillianAbrego/LaraLinker"
+                    target="_blank"
+                    class="button icon brands fa-github"
+                    >GitHub</a
+                  >
                 </li>
               </ul>
             </div>
