--- a/index.html
+++ b/index.html
@@ -191,44 +191,54 @@
           <p></p>
           <div class="split style1">
             <section>
-              <form method="post" action="#">
+              <form
+                method="post"
+                action="mailto:willianantonioabrego@gmail.com"
+                enctype="text/plain"
+              >
                 <div class="fields">
                   <div class="field half">
-                    <label for="name">Name</label>
+                    <label for="name">Nombre</label>
                     <input type="text" name="name" id="name" />
                   </div>
                   <div class="field half">
-                    <label for="email">Email</label>
+                    <label for="email">Correo</label>
                     <input type="text" name="email" id="email" />
                   </div>
                   <div class="field">
-                    <label for="message">Message</label>
+                    <label for="message">Mensaje</label>
                     <textarea name="message" id="message" rows="5"></textarea>
                   </div>
                 </div>
                 <ul class="actions">
-                  <li><a href="" class="button submit">Send Message</a></li>
+                  <li><a href="" class="button submit">Enviar</a></li>
                 </ul>
               </form>
             </section>
             <section>
               <ul class="contact">
                 <li>
-                  <h3>Email</h3>
-                  <a href="#">user@untitled.tld</a>
+                  <h2>Email</h2>
+                  <h3>willianantonioabrego@gmail.com</h3>
                 </li>
 
                 <li>
                   <h3>Social</h3>
                   <ul class="icons">
                     <li>
-                      <a href="#" class="icon brands fa-github"
+                      <a
+                        href="https://github.com/WillianAbrego"
+                        target="_blank"
+                        class="icon brands fa-github"
                         ><span class="label">GitHub</span></a
                       >
                     </li>
 
                     <li>
-                      <a href="#" class="icon brands fa-linkedin-in"
+                      <a
+                        href="https://www.linkedin.com/in/willian-antonio-abrego-de-león"
+                        target="_blank"
+                        class="icon brands fa-linkedin-in"
                         ><span class="label">LinkedIn</span></a
                       >
                     </li>
